--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,7 @@ instance/
 docs/_build/
 
 # PyBuilder
-#target/
+target/
 
 # IPython Notebook
 .ipynb_checkpoints
@@ -87,3 +87,7 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+bin/
+include/
+local/
