--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ enum34==1.1.6
 idna==2.1
 ipaddress==1.0.16
 paramiko==2.0.1
+py==1.4.31
 pyasn1==0.1.9
 pycparser==2.14
 pykerberos==1.1.13
+pytest==2.9.2
 python-ntlm3==1.0.2
 pywinrm==0.2.0
 requests==2.10.0
