added examples for sudo & enable

--- a/inventory_sample.ini
+++ b/inventory_sample.ini
@@ -1,4 +1,9 @@
-[host]
+[ssh_host]
 ssh_username=test
 ssh_password=pw123!@#
+
+[sudo_host]
 sudo_password=pw123!@#
+
+[enable_host]
+enable_password=pw123!@#
