added inventory samples; fixes to ssh for non-inv use

--- a/inventory_sample.ini
+++ b/inventory_sample.ini
@@ -1,6 +1,15 @@
-[ssh_host]
+[ssh_password_host]
+ssh_port=22
 ssh_username=test
 ssh_password=pw123!@#
+
+[ssh_key_host]
+ssh_private_key_filename=~/.ssh/id_rsa
+# password will be requested if file requires one
+
+[ssh_key_pw_host]
+ssh_private_key_filename=~/.ssh/id_rsa
+ssh_private_key_file_password=pw123!@#
 
 [sudo_host]
 sudo_password=pw123!@#
